// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansReducer should handle all defined error types: rejected types ADD_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": true,
      "cancel": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "ADD_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types CANCEL_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": true,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "CANCEL_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types DELETE_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": true,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "DELETE_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_CONNECTION_RESULTS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_CONNECTION_RESULTS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_INSPECTION_RESULTS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_INSPECTION_RESULTS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCAN_JOBS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_JOBS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types GET_SCANS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCANS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types PAUSE_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pause": true,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "PAUSE_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types RESTART_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": true,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "RESTART_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined error types: rejected types START_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": true,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "START_SCAN_REJECTED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types ADD_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": true,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "ADD_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types CANCEL_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "CANCEL_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types DELETE_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "DELETE_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "scan": Object {
        "test": "success",
      },
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_CONNECTION_RESULTS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_CONNECTION_RESULTS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_INSPECTION_RESULTS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_INSPECTION_RESULTS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCAN_JOBS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_JOBS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCANS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCANS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types PAUSE_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pause": true,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "PAUSE_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types RESTART_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pause": false,
      "pending": false,
      "restart": true,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "RESTART_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types START_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": true,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "START_SCAN_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types ADD_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": true,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": true,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "ADD_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types CANCEL_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": true,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "CANCEL_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types DELETE_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "DELETE_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "scan": undefined,
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_CONNECTION_RESULTS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_CONNECTION_RESULTS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_INSPECTION_RESULTS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_INSPECTION_RESULTS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCAN_JOBS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": true,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCAN_JOBS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCANS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": true,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "GET_SCANS_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types PAUSE_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": true,
      "pending": true,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "PAUSE_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types RESTART_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": true,
      "restart": true,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "RESTART_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types START_SCAN 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": true,
      "restart": false,
      "start": true,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "START_SCAN_PENDING",
}
`;

exports[`ScansReducer should handle specific defined types: defined type MERGE_SCAN_DIALOG_HIDE 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "MERGE_SCAN_DIALOG_HIDE",
}
`;

exports[`ScansReducer should handle specific defined types: defined type MERGE_SCAN_DIALOG_SHOW 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": undefined,
      "scans": undefined,
      "show": true,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "MERGE_SCAN_DIALOG_SHOW",
}
`;

exports[`ScansReducer should handle specific defined types: defined type RESET_SCAN_ADD_STATUS 1`] = `
Object {
  "result": Object {
    "action": Object {
      "add": false,
      "cancel": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pause": false,
      "pending": false,
      "restart": false,
      "start": false,
    },
    "connectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "detail": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "scan": Object {},
    },
    "inspectionResults": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "results": Array [],
    },
    "jobs": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "jobs": Array [],
      "pending": false,
    },
    "merge_dialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "update": Object {
      "delete": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "sourcesCount": 0,
    },
  },
  "type": "RESET_SCAN_ADD_STATUS",
}
`;
